# yueshang

./: .gitignore  README.md  app.js  brochure.css  brochure.html  index.html  styles.css  works.css  works.html
aoi-platform/: README.md  pyproject.toml  requirements.txt
aoi-platform/configs/: defaults.yaml
aoi-platform/configs/profiles/: charger.yaml  connector.yaml  keyboard.yaml  metal_part.yaml  pcb.yaml  plastic_part.yaml  toy.yaml
aoi-platform/docs/: adding-a-product.md
aoi-platform/examples/: quickstart.py
aoi-platform/src/yueshang_aoi/: __init__.py
aoi-platform/src/yueshang_aoi/cli/: inspect.py
aoi-platform/src/yueshang_aoi/core/: __init__.py  config.py  pipeline.py  result.py
aoi-platform/src/yueshang_aoi/reporting/: __init__.py  html_writer.py  json_writer.py
aoi-platform/src/yueshang_aoi/routes/: __init__.py  base.py  golden_match.py  highpass_edge.py  opencv_anomaly.py  registry.py  yolo_cls.py
aoi-platform/src/yueshang_aoi/stages/: __init__.py  _yolo_localizer.py  localizer.py  roi_detector.py
aoi-platform/tests/: test_pipeline_smoke.py
docs/: business-plan.md  product-matrix.md
public/logo/: yueshang-logo-source.ai
trade-copilot/: .env.example  README.md  requirements.txt
trade-copilot/data/seed/: compliance_overview.md  hscode_examples.md  inquiry_templates.md
trade-copilot/src/yueshang_copilot/: __init__.py
trade-copilot/src/yueshang_copilot/agents/: buyer_profile.py  compliance.py  hscode.py  inquiry_reply.py  product_page.py
trade-copilot/tests/: test_smoke.py
website/: index.html  styles.css  works.css  works.html
(+9 files in other folders)
